chore: add warning to not update API files directly
